[gd_scene load_steps=2 format=3 uid="uid://merchant_panel001"]

[ext_resource type="Script" path="res://scripts/ui/merchant_panel.gd" id="1"]

[node name="MerchantPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "MERCHANT"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "X"

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 70.0
offset_right = -50.0
offset_bottom = 100.0
theme_override_constants/separation = 30

[node name="MerchantRep" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Merchant Reputation: Neutral"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Currency" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Currency: 0"

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -230.0
offset_right = 550.0
offset_bottom = 280.0

[node name="SellingSection" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 480.0
offset_bottom = 260.0

[node name="Title" type="Label" parent="LeftPanel/SellingSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Selling"

[node name="Grid" type="GridContainer" parent="LeftPanel/SellingSection"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="CraftingSection" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 280.0
offset_right = 480.0
offset_bottom = 490.0

[node name="Title" type="Label" parent="LeftPanel/CraftingSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Crafting"

[node name="Grid" type="GridContainer" parent="LeftPanel/CraftingSection"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="RightPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -230.0
offset_right = -50.0
offset_bottom = 280.0

[node name="StashTitle" type="Label" parent="RightPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 18
text = "Your Stash"

[node name="ScrollContainer" type="ScrollContainer" parent="RightPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 60.0
offset_right = 480.0
offset_bottom = 490.0

[node name="StashGrid" type="GridContainer" parent="RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0

[node name="BuyButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
text = "Buy"

[node name="SellButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -20.0
offset_right = 270.0
offset_bottom = 20.0
text = "Sell"

[node name="CraftButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 290.0
offset_top = -20.0
offset_right = 390.0
offset_bottom = 20.0
text = "Craft"

[node name="BackButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 20.0
text = "Back"
